fix the gaps on dropdown menu, add social media icons

--- a/css/style.css
+++ b/css/style.css
@@ -184,29 +184,33 @@ h3 {
 .header {
   margin: 0;
   width: 100%;
-  height: 8vh;
+  height: 9vh;
   background-color: #76a3a3;
   box-shadow: 0 2px 5px #888888;
   display: grid;
   grid-template-columns: 5% 45% 45%;
+  grid-template-rows: 1fr;
   justify-content: space-between;
   grid-column-gap: 0.5rem;
   align-items: center; }
   .header__logo-box {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     display: grid;
     justify-content: center;
     align-content: center; }
-  .header__logo {
-    width: 4.5rem; }
+    .header__logo-box-img {
+      width: 4.5rem; }
   .header__heading {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
     letter-spacing: 2px;
     padding-left: 1rem;
-    font-size: 2.1rem;
-    animation: bounceInDown 0.5s 0.3s ease-in-out;
-    -webkit-animation: bounceInDown 0.5s 0.3s ease-in-out; }
+    font-size: 3.3rem; }
   .header__heading a:link,
   .header__heading a:visited {
-    color: #76a3a3; }
+    color: #fff;
+    font-weight: 600; }
   .header__heading a:hover,
   .header__heading a:active {
     color: #d24747;
@@ -216,6 +220,8 @@ h3 {
     -ms-transition: all 0.3s;
     -o-transition: all 0.3s; }
   .header__nav {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
     z-index: 99; }
     .header__nav--menu {
       display: grid;
@@ -249,6 +255,7 @@ h3 {
     display: inline-block;
     width: 100%; }
   .menu__item:hover {
+    color: #fff;
     transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
@@ -271,9 +278,11 @@ h3 {
       -moz-transition: all 0.5s;
       -ms-transition: all 0.5s;
       -o-transition: all 0.5s; }
-    .menu__dropdown-item:hover {
-      margin-top: 0.5rem;
-      color: #fff; }
+    .menu__dropdown-item:link, .menu__dropdown-item::visited {
+      color: #d24747; }
+    .menu__dropdown-item:hover, .menu__dropdown-item:active {
+      color: #d24747;
+      text-decoration: underline; }
 
 #sReasons,
 #eThings,
